tests/samples/good/nullary_function.co
fun foo(): int {
  42
}

fun main() {
  var x = foo();
  assert(x == 42);
}
