tests/samples/compile_error/assign_to_literal.co
fun main() {
  var x = 42;
  30 = 42;
}
